<?xml version="1.0" encoding="utf-8"?>
<!-- -DO NOT CHANGE THIS FILE! -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.d7knight.invoicer.activities.PriceEditor">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            style="@style/fill18"
            android:text="@string/pe_product" />

        <EditText
            style="@style/fill24"
            android:hint="@string/pe_product"
            android:imeOptions="actionNext"
            android:singleLine="true" />

        <TextView
            style="@style/fill18"
            android:text="@string/pe_price" />

        <EditText
            style="@style/fill24"
            android:hint="@string/pe_price"
            android:imeOptions="actionNext"
            android:inputType="number|numberSigned|numberDecimal"
            android:singleLine="true" />

        <TextView
            style="@style/fill18"
            android:text="@string/pe_units" />

        <EditText
            style="@style/fill24"
            android:hint="@string/pe_units"
            android:imeOptions="actionDone"
            android:singleLine="true" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <Button
                style="@style/wrap24"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:text="@string/submit" >
            </Button>

            <Button
                style="@style/wrap24"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:text="@string/cancel" >
            </Button>
        </RelativeLayout>
    </LinearLayout>

</ScrollView>