<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="org.d7knight.invoicer.activities.StartActivity">

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/start_icon"
        android:layout_marginLeft="3dip"
        android:scaleType="center"
        android:layout_gravity="center_horizontal|center_vertical"/>
    <TextView
        style="@style/fillw24"
        android:text="@string/start_welcome"
        android:layout_gravity="center_horizontal|center_vertical"
        android:textAlignment="center"
        android:layout_width="wrap_content" />


    <Button

        android:onClick="manageContacts"
        android:layout_marginTop="@dimen/activity_start_button_spacing"
        android:text="@string/start_contacts"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:typeface="normal"
        android:textStyle="normal|bold"
        android:textAllCaps="false">
    </Button>
    <Button
        android:layout_marginTop="@dimen/activity_start_button_spacing"
        android:onClick="manageProducts"
        android:text="@string/start_products"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="normal|bold"
        android:textAllCaps="false">
    </Button>
    <Button
android:layout_marginTop="@dimen/activity_start_button_spacing"
        android:onClick="manageInvoices"

        android:text="@string/manage_invoices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="normal|bold"
        android:textAllCaps="false">
    </Button>

</LinearLayout>
