<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="org.d7knight.invoicer.activities.Step1"
    android:id="@+id/drawer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    >


        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar"/>
    <ScrollView
        android:layout_below="@+id/toolbar"
        android:layout_above="@+id/ci_bottombar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/ft_content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >



            <View
                android:layout_width="fill_parent"
                android:layout_height="1sp"
                android:layout_marginBottom="10sp"
                android:background="#FFCCCCCC"
                android:fadingEdge="horizontal" />

            <TextView
                style="@style/wrap18"
                android:text="@string/ci_tag" >
            </TextView>

            <AutoCompleteTextView
                android:id="@+id/ci_tag"
                style="@style/fillw24"
                android:hint="@string/ci_tag"
                android:imeOptions="actionNext"
                android:singleLine="true" >
            </AutoCompleteTextView>

            <TextView
                style="@style/wrap18"
                android:text="@string/ci_address" >
            </TextView>

            <AutoCompleteTextView
                android:id="@+id/ci_address"
                style="@style/fillw24"
                android:hint="@string/ci_address"
                android:imeOptions="actionDone" >
            </AutoCompleteTextView>

            <TextView
                style="@style/wrap18"
                android:text="@string/ci_phone" >
            </TextView>

            <AutoCompleteTextView
                android:id="@+id/ci_phone"
                style="@style/fillw24"
                android:hint="@string/ci_phone"
                android:imeOptions="actionDone"
                android:inputType="phone"
                android:singleLine="true" >
            </AutoCompleteTextView>
        </LinearLayout>

    </ScrollView>

    <RelativeLayout
        android:id="@+id/ci_bottombar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" >

        <Button
            android:id="@+id/ci_menu"
            style="@style/wrap24"
            android:layout_alignParentLeft="true"
            android:onClick="menu"
            android:text="@string/menu" >
        </Button>

        <TextView
            style="@style/wrap18"
            android:layout_alignBottom="@+id/ci_next"
            android:layout_toLeftOf="@+id/ci_next"
            android:layout_toRightOf="@+id/ci_menu"
            android:gravity="center"
            android:text="@string/ci_title" />

        <Button
            android:id="@+id/ci_next"
            style="@style/wrap24"
            android:layout_alignParentRight="true"
            android:onClick="enterProduct"
            android:text="@string/next" >
        </Button>
    </RelativeLayout>
</RelativeLayout>
    <ListView
        android:layout_width="260dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/windowBackgroundColor"/>
</android.support.v4.widget.DrawerLayout>